{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 47,
  "lineage": "54340896-41c2-9632-88cb-822535e694f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_app_server_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-000efc7ea4c31b096",
            "arn": "arn:aws:ec2:ap-south-1:004380138556:instance/i-0a77250ef0bb0c853",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a77250ef0bb0c853",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08826dc8b33d2c2f9"
              }
            ],
            "primary_network_interface_id": "eni-08826dc8b33d2c2f9",
            "private_dns": "ip-10-0-1-24.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-3-109-133-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.133.7",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0058426a91ae95bde",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035857778a892425b",
            "tags": {
              "Name": "testing-server-one"
            },
            "tags_all": {
              "Name": "testing-server-one"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f10fb4d8d0e4c3a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004380138556",
            "id": "i-0a77250ef0bb0c853",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.my_sg",
            "aws_subnet.my_app_subnet",
            "aws_vpc.my_app_vpc",
            "data.aws_ami.latest_amazon_linux_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:004380138556:internet-gateway/igw-0c3f16dd564e7937e",
            "id": "igw-0c3f16dd564e7937e",
            "owner_id": "004380138556",
            "region": "ap-south-1",
            "tags": {
              "Name": "testing-igw"
            },
            "tags_all": {
              "Name": "testing-igw"
            },
            "vpc_id": "vpc-07dbbdc3b2d8d7d19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:004380138556:route-table/rtb-0def4bab7e35cb67d",
            "id": "rtb-0def4bab7e35cb67d",
            "owner_id": "004380138556",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3f16dd564e7937e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-rtb"
            },
            "tags_all": {
              "Name": "testing-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dbbdc3b2d8d7d19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004380138556",
            "id": "rtb-0def4bab7e35cb67d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_app_igw",
            "aws_vpc.my_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b584a31991ac29cb",
            "region": "ap-south-1",
            "route_table_id": "rtb-0def4bab7e35cb67d",
            "subnet_id": "subnet-035857778a892425b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_app_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.my_app_subnet",
            "aws_vpc.my_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:004380138556:security-group/sg-06f10fb4d8d0e4c3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f10fb4d8d0e4c3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "testing-sg",
            "name_prefix": "",
            "owner_id": "004380138556",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-sg"
            },
            "tags_all": {
              "Name": "testing-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dbbdc3b2d8d7d19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004380138556",
            "id": "sg-06f10fb4d8d0e4c3a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:004380138556:subnet/subnet-035857778a892425b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035857778a892425b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004380138556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "testing-subnet-1"
            },
            "tags_all": {
              "Name": "testing-subnet-1"
            },
            "vpc_id": "vpc-07dbbdc3b2d8d7d19"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004380138556",
            "id": "subnet-035857778a892425b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:004380138556:vpc/vpc-07dbbdc3b2d8d7d19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b189c29d7d821a1",
            "default_route_table_id": "rtb-056d42ef6535e4ae7",
            "default_security_group_id": "sg-0f5bb75bf74acef4b",
            "dhcp_options_id": "dopt-0eb8dbd31c6e0b64b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07dbbdc3b2d8d7d19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056d42ef6535e4ae7",
            "owner_id": "004380138556",
            "region": "ap-south-1",
            "tags": {
              "Name": "testing-vpc"
            },
            "tags_all": {
              "Name": "testing-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004380138556",
            "id": "vpc-07dbbdc3b2d8d7d19",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}